# AI_Diplomacy

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  budget.sh  config.py  create_test_memory.py  deception_analyzer.py  entrypoint.sh  evaluate.py  experiment_runner.py  lm_game.py  pyproject.toml
.claude/: settings.local.json
ai_diplomacy/: agent.py  clients.py  formatter.py  game_logic.py  game_runner.py  narrative.py  prompt_constructor.py  token_tracker.py  utils.py
ai_diplomacy/prompts_simple/: context_prompt.txt  negotiation_diary_prompt.txt  state_update_prompt.txt
diplomacy/: __init__.py
documentation/: project_outline.blg  project_outline.dvi  project_outline.out.ps  project_outline.tex  references.bib
experiment_configs/: k8s_3game_memory.py  memory_vs_baseline.py  memory_vs_baseline_7models.py  quick_test.py
k8s/: job-game2-3.yaml  namespace.yaml  secret-api-keys.yaml  secret-b2.yaml  secret-ghcr.yaml
result_analysis/: deception_error_analysis.ipynb  playstyle_analysis.ipynb  trust_analysis.ipynb
results/20260421_142720/: lmvsgame.json  overview.jsonl  token_usage.json
results/20260421_142824/: llm_responses.csv  lmvsgame.json  overview.jsonl  token_usage.csv  token_usage.json
results/20260421_143929/: llm_responses.csv
results/20260421_144558/: overview.jsonl  token_usage.json
results/3game_experiment/: deception_analysis.json  deception_scores.csv  deception_token_usage.csv  deception_token_usage.json  experiment_config.json  experiment_state.json  (+1 more)
smoke_1903/: llm_responses.csv  lmvsgame.json  overview.jsonl
(+39 files in other folders)
