[project]
name = "ai-diplomacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.54.0",
  "bcrypt>=4.3.0",
  "coloredlogs>=15.0.1",
  "dotenv>=0.9.9",
  "google-genai>=1.21.1",
  "google-generativeai>=0.8.5",
  "json-repair>=0.47.2",
  "json5>=0.12.0",
  "openai>=1.90.0",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "together>=1.5.17",
  "tqdm>=4.67.1",
  "ujson>=5.10.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pandas>=2.1",
]

[tool.ruff]
line-length = 150
